# cracktools

./: CMakeLists.txt  README  crack.cpp  crack.h  log.cpp  main.cpp  opts.cpp  opts.h  passthrough.cpp  process.cpp  process.h  test.cpp
asciify/: Makefile  asciify.py
brute/: CMakeLists.txt  README.md  crack.cpp  log.h  passthrough.h  process.cpp
brute/examples/: arg.c  stdin.c
sash32/: Makefile
